--- a/Scss/components/_brandsMarquee.scss
+++ b/Scss/components/_brandsMarquee.scss
@@ -51,3 +51,84 @@
         }
     }
 } 
+
+@media (max-width: 1024px){
+  #company-container{
+    h1{
+      font-size: 1.7rem;
+      margin-bottom: 3rem;
+    }
+
+    .company-logos{
+      gap: 1.5rem;
+
+      div{
+        gap: 8%;
+        animation-duration: 55s;
+
+        &:nth-child(2){
+          animation-duration: 35s;
+        }
+
+        img{
+          height: 3.2rem;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px){
+  #company-container{
+    padding-inline: 6%;
+
+    h1{
+      font-size: 1.4rem;
+      margin-bottom: 2.5rem;
+      line-height: 1.3;
+    }
+
+    .company-logos{
+      gap: 1.2rem;
+
+      div{
+        gap: 6%;
+        animation-duration: 70s;
+
+        &:nth-child(2){
+          animation-duration: 50s;
+        }
+
+        img{
+          height: 2.6rem;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 480px){
+  #company-container{
+    h1{
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+
+    .company-logos{
+      gap: 1rem;
+
+      div{
+        gap: 5%;
+        animation-duration: 85s;
+
+        &:nth-child(2){
+          animation-duration: 65s;
+        }
+
+        img{
+          height: 2.2rem;
+        }
+      }
+    }
+  }
+}
