--- a/Scss/components/_credentialsSection.scss
+++ b/Scss/components/_credentialsSection.scss
@@ -3,7 +3,9 @@
 
 #credentials{
     margin-top:10%;
-    height:300px;
+    min-height:300px;
+    height: auto;
+    padding-block: 3rem;
     position:relative;
     background-image:url('Images/class1.jpg');
     background-repeat:no-repeat;
@@ -65,4 +67,126 @@
             }
         }
     }
+}
+
+@media (max-width: 1140px) {
+  #credentials .credentials-items .credentials-items-wrapper {
+    padding-inline: 17%;
+  }
+}
+
+@media (max-width: 1024px) {
+  #credentials {
+    margin-top: 12%;
+    padding-block: 3.5rem;
+
+    .credentials-items{
+        .credentials-items-wrapper {
+          gap: 12%;
+
+          & > div {
+            i {
+              font-size: 2.6rem;
+            }
+
+            span {
+              font-size: 1.7rem;
+            }
+
+            h5 {
+              font-size: 14px;
+            }
+          }
+        }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+    #credentials .credentials-items .credentials-items-wrapper {
+        padding-inline: 30%;
+        gap: 10%;
+    }
+}
+
+@media (max-width: 730px) {
+  #credentials {
+    background-position: center;
+
+    .credentials-items {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+      align-items: baseline;
+
+        .credentials-items-wrapper {
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          gap: 2rem;
+          justify-content: flex-start;
+          justify-items: baseline;
+          align-items: baseline;
+          padding-inline: 6%;
+
+          &:last-child {
+            margin-top: 0;
+          }
+
+          & > div {
+            justify-content: center;
+            text-align: left;
+
+            i {
+              font-size: 2.4rem;
+            }
+
+            span {
+              font-size: 1.6rem;
+            }
+          }
+        }
+        .credentials-items-wrapper:nth-child(2){
+            & > div:nth-child(2) {
+                margin-left: 2rem;
+            }
+        }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  #credentials {
+    padding-block: 3rem;
+
+    .credentials-items {
+        .credentials-items-wrapper {
+          grid-template-columns: 1fr;
+          gap: 1.8rem;
+          justify-items: baseline;
+
+          & > div {
+            justify-content: center;
+
+            i {
+              font-size: 2.2rem;
+            }
+
+            span {
+              font-size: 1.4rem;
+            }
+
+            h5 {
+              font-size: 13px;
+              white-space: normal;
+              line-height: 1.2;
+            }
+          }
+        }
+        .credentials-items-wrapper:nth-child(2){
+        & > div:nth-child(2) {
+            margin-left: 0;
+        }
+    }
+    } 
+  }
 }
