--- a/Scss/components/_footer.scss
+++ b/Scss/components/_footer.scss
@@ -2,6 +2,8 @@
 
 
 #footer{
+    position: relative;
+    z-index: 1;
     background: linear-gradient(135deg, $site-blue-dark 0%, $site-blue 100%);
     color: #fff;
     padding: 4% 0 0 0;
@@ -150,6 +152,7 @@
                             border: none;
                             color: #fff;
                             font-size: 14px;
+                            width: 80%;
 
                             &::placeholder{
                                 color: rgba(255, 255, 255, 0.6);
@@ -168,6 +171,7 @@
                             cursor: pointer;
                             transition: 0.3s;
                             font-size: 16px;
+                            width: 20%;
 
                             &:hover{
                                 background-color: $site-green;
